# BEVM

./: .gitignore  Cargo.toml  README.md  rust-toolchain
cli/: Cargo.toml
cli/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  service.rs
cli/src/genesis/: mod.rs
docs/logs/: log-240320-1.txt
docs/notes/: note-240320-1.md  note-240326-1.md
executor/: Cargo.toml
executor/src/: lib.rs
node/: Cargo.toml  build.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
primitives/: Cargo.toml
primitives/assets-registrar/: Cargo.toml
primitives/assets-registrar/src/: lib.rs
primitives/gateway/bitcoin/: Cargo.toml
primitives/gateway/bitcoin/src/: detector.rs  extractor.rs  lib.rs  types.rs  utils.rs
primitives/gateway/common/: Cargo.toml
primitives/gateway/common/src/: lib.rs
primitives/genesis-builder/src/: genesis_params.rs  regenesis_params.rs
primitives/io/: Cargo.toml
primitives/io/src/: lib.rs
primitives/mining/common/: Cargo.toml
primitives/mining/common/src/: lib.rs
primitives/mining/staking/: Cargo.toml
primitives/mining/staking/src/: lib.rs
primitives/protocol/: Cargo.toml
primitives/protocol/src/: asset.rs  lib.rs  network.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/runtime/: Cargo.toml
primitives/runtime/src/: lib.rs
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/bevm/: Cargo.toml
runtime/bevm/src/: constants.rs  impls.rs  lib.rs  precompiles.rs  withdraw.rs
runtime/chainx/src/: constants.rs  impls.rs  lib.rs  migrations.rs  precompiles.rs  withdraw.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/dev/src/: constants.rs  impls.rs  lib.rs
runtime/src/: lib.rs
service/src/: client.rs  lib.rs
xpallets/assets-bridge/: Cargo.toml  README.md
xpallets/assets-bridge/src/: abi.rs  lib.rs  mock.rs  recover.rs  tests.rs
xpallets/assets-registrar/src/: benchmarking.rs  lib.rs  tests.rs  types.rs  verifier.rs  weights.rs
xpallets/assets/rpc/runtime-api/src/: lib.rs
xpallets/assets/rpc/src/: lib.rs
xpallets/assets/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  trigger.rs  types.rs  weights.rs
xpallets/btc-ledger/: Cargo.toml  README.md
xpallets/btc-ledger/rpc/: Cargo.toml
xpallets/btc-ledger/rpc/runtime-api/: Cargo.toml
xpallets/btc-ledger/rpc/runtime-api/src/: lib.rs
xpallets/btc-ledger/rpc/src/: lib.rs
xpallets/btc-ledger/src/: lib.rs  mock.rs  tests.rs
xpallets/dex/spot/src/: lib.rs
xpallets/ethereum-chain-id/: Cargo.toml
xpallets/ethereum-chain-id/src/: lib.rs
xpallets/gateway/bitcoin/: Cargo.toml
xpallets/gateway/bitcoin/rpc/: Cargo.toml
xpallets/gateway/bitcoin/rpc/runtime-api/: Cargo.toml
xpallets/gateway/bitcoin/rpc/runtime-api/src/: lib.rs
xpallets/gateway/bitcoin/rpc/src/: lib.rs
xpallets/gateway/bitcoin/src/: benchmarking.rs  lib.rs  mock.rs  trustee.rs  types.rs  weights.rs
xpallets/gateway/bitcoin/src/header/: header_proof.rs  mod.rs
xpallets/gateway/bitcoin/src/tests/: header.rs  mod.rs  trustee.rs  tx.rs
xpallets/gateway/bitcoin/src/tx/: mod.rs  validator.rs
xpallets/gateway/common/: Cargo.toml
xpallets/gateway/common/rpc/: Cargo.toml
xpallets/gateway/common/rpc/runtime-api/: Cargo.toml
xpallets/gateway/common/rpc/runtime-api/src/: lib.rs
xpallets/gateway/common/rpc/src/: lib.rs
xpallets/gateway/common/src/: benchmarking.rs  binding.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  utils.rs  weights.rs
xpallets/gateway/common/src/migrations/: taproot.rs
xpallets/gateway/common/src/trustees/: bitcoin.rs  mod.rs
xpallets/gateway/records/: Cargo.toml
xpallets/gateway/records/rpc/: Cargo.toml
xpallets/gateway/records/rpc/runtime-api/: Cargo.toml
xpallets/gateway/records/rpc/runtime-api/src/: lib.rs
xpallets/gateway/records/rpc/src/: lib.rs
xpallets/gateway/records/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
xpallets/genesis-builder/src/: lib.rs  regenesis.rs
xpallets/mining/asset/rpc/runtime-api/src/: lib.rs
xpallets/mining/asset/rpc/src/: lib.rs
xpallets/mining/asset/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  rpc.rs  tests.rs  types.rs
xpallets/mining/staking/rpc/runtime-api/src/: lib.rs
xpallets/mining/staking/rpc/src/: lib.rs
xpallets/mining/staking/src/: benchmarking.rs  constants.rs  election.rs  genesis.rs  impls.rs  lib.rs  mock.rs  rpc.rs  slashing.rs  tests.rs  types.rs
xpallets/mining/staking/src/reward/: mod.rs  proposal09.rs
xpallets/staking/: Cargo.toml
xpallets/staking/rpc/: Cargo.toml
xpallets/staking/rpc/runtime-api/: Cargo.toml
xpallets/staking/rpc/runtime-api/src/: lib.rs
xpallets/staking/rpc/src/: lib.rs
xpallets/staking/src/: benchmarking.rs  constants.rs  election.rs  impls.rs  lib.rs  mock.rs  rpc.rs  slashing.rs  tests.rs  types.rs  weights.rs
xpallets/staking/src/reward/: mod.rs  proposal09.rs
xpallets/support/: Cargo.toml
xpallets/support/src/: lib.rs  traits.rs
xpallets/system/: Cargo.toml
xpallets/system/src/: lib.rs
xpallets/transaction-fee/: Cargo.toml
xpallets/transaction-fee/rpc/: Cargo.toml
xpallets/transaction-fee/rpc/runtime-api/: Cargo.toml
xpallets/transaction-fee/rpc/runtime-api/src/: lib.rs
xpallets/transaction-fee/rpc/src/: lib.rs
xpallets/transaction-fee/src/: lib.rs  types.rs
