[workspace.package]
version = "0.1.0"
authors = ["The BEVM Authors"]
homepage = "https://www.bevm.io/"
edition = "2021"
description = "A community-driven BTC Layer2 project"
repository = "https://github.com/btclayer2/BEVM"


[workspace]
members = [
    "cli",
    "executor",
    "runtime/bevm",
    "rpc",

    "primitives/assets-registrar",
    "primitives/gateway/bitcoin",
    "primitives/gateway/common",
    "primitives/io",
    "primitives/mining/common",
    "primitives/mining/staking",
    "primitives/protocol",
    "primitives/rpc",
    "primitives/runtime",

    "xpallets/assets-bridge",
    "xpallets/btc-ledger",
    "xpallets/btc-ledger/rpc",
    "xpallets/btc-ledger/rpc/runtime-api",
    "xpallets/ethereum-chain-id",
    "xpallets/gateway/bitcoin",
    "xpallets/gateway/bitcoin/rpc",
    "xpallets/gateway/bitcoin/rpc/runtime-api",
    "xpallets/gateway/common",
    "xpallets/gateway/common/rpc",
    "xpallets/gateway/common/rpc/runtime-api",
    "xpallets/gateway/records",
    "xpallets/gateway/records/rpc",
    "xpallets/gateway/records/rpc/runtime-api",
    "xpallets/staking",
    "xpallets/staking/rpc",
    "xpallets/staking/rpc/runtime-api",
    "xpallets/support",
    "xpallets/system",
    "xpallets/transaction-fee",
    "xpallets/transaction-fee/rpc",
    "xpallets/transaction-fee/rpc/runtime-api"
]
resolver = "2"

[workspace.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
panic = "unwind"
