[package]
name = "bevm-executor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bevm-runtime = { path = "../runtime/bevm" }
# BEVM primitives
xp-io = { path = "../primitives/io" }

frame-benchmarking = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-executor = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }


