[package]
name = "bevm-rpc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }
bevm-primitives = { path = "../primitives" }

pallet-transaction-payment-rpc = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-chain-spec = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-client-api = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-consensus-babe = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-consensus-babe-rpc = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-consensus-grandpa = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-consensus-grandpa-rpc = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-rpc = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-rpc-api = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-sync-state-rpc = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sc-transaction-pool-api = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-api = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-block-builder = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-blockchain = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-consensus = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-consensus-babe = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-keystore = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
sp-runtime = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
substrate-frame-rpc-system = { git = "https://github.com/btclayer2/polkadot-sdk", branch = "polkadot-v1.3.0" }
